--- a/css/styles.css
+++ b/css/styles.css
@@ -1,34 +1,52 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/* 
+    font-family: "Poppins", serif;
+    font-family: "Montserrat", serif;
+    font-family: "Open Sans", serif;
+*/
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
-/* Font para los textos, font-family: "Lato", serif; */
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-/* Font para los titulos y subtitulos, font-family: "Cormorant Garamond", serif; */
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-/* Font para breve descripciones, font-family: "Montserrat", serif; */
+/* Fuentes generales */
+h1,
+h2 {
+    font-family: "Poppins", serif;
+}
+
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Montserrat", serif;
+}
+
+p,
+span,
+a {
+    font-family: "Open Sans", serif;
+}
 
 header {
     background-color: #fff;
     padding: 15px 20px;
-    position: fixed;
+    position: static;
     width: 100%;
     top: 0;
     left: 0;
     right: 0;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     z-index: 100;
-    font-family: 'Montserrat', sans-serif;
 }
 
-.container {
+.container-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 1200px;
+    max-width: 1350px;
     margin: 0 auto;
 }
 
@@ -36,7 +54,7 @@ header {
 .logo {
     display: block;
     object-fit: cover;
-    width: 100px;
+    width: 90px;
     max-width: 100%;
     height: auto;
 }
@@ -45,7 +63,14 @@ header {
 .nav-links {
     list-style: none;
     display: flex;
-    gap: 40px;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+.no-scroll {
+    overflow: hidden;
+    height: 100vh;
 }
 
 .nav-links li {
@@ -55,11 +80,12 @@ header {
 .nav-links li a {
     text-decoration: none;
     color: #333;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     transition: color 0.3s;
     font-weight: 500;
     position: relative;
-    padding-bottom: 3px;
+    padding-bottom: 1.5px;
+    text-transform: uppercase;
 }
 
 .nav-links li a:hover {
@@ -82,46 +108,48 @@ header {
     width: 100%;
 }
 
+/* === Telefono y boton para la reserva === */
 .contact-info {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    gap: 15px;
 }
 
 .contact-info span {
-    font-size: 19px;
-    font-weight: 400;
+    font-size: 1.1rem;
+    font-weight: 500;
     display: flex;
     align-items: center;
-    gap: 5px;
-    color: #99754e;
+    justify-content: center;
+    gap: 10px;
+    color: #000000;
 }
 
 .contact-info ion-icon {
-    color: #99754e;
-    font-size: 25px;
+    color: #000000;
+    font-size: 24px;
 }
 
 /* Botón de reserva */
 .btn-reserva {
     text-align: center;
-    font-size: 1.1rem;
-    background-color: #c49a6c;
+    font-size: clamp(1rem, 3vw, 1.1rem);
+    background-color: #ff6f61;
     color: white;
-    padding: 15px 30px;
+    padding: 10px 25px;
     text-decoration: none;
-    border-radius: 5px;
+    border-radius: 50px;
     text-transform: uppercase;
-    transition: background 0.3s;
+    transition: background 0.3s ease;
     border: none;
     outline: none;
     cursor: pointer;
 }
 
 .btn-reserva:hover {
-    background-color: #c08347;
+    background-color: #e65a50;
 }
 
 .linea-divisora {
@@ -131,17 +159,18 @@ header {
     background-color: #ffffff;
 }
 
+/* === boton reserva vista mobile === */
 .btn-reserva-mobile {
     display: none;
     text-align: center;
-    font-size: 1.1rem;
+    font-size: clamp(1rem, 3vw, 1.2rem);
     background-color: #c49a6c;
     color: white;
     padding: 15px 30px;
     text-decoration: none;
     border-radius: 5px;
     text-transform: uppercase;
-    transition: background 0.3s;
+    transition: background 0.3s ease-in;
     border: none;
     outline: none;
     cursor: pointer;
@@ -151,13 +180,14 @@ header {
     background-color: #c08347;
 }
 
-/* Menú hamburguesa */
+/* === Icono del menu hamburguesa ===*/
 .menu-toggle {
     display: none;
     flex-direction: column;
     cursor: pointer;
 }
 
+/* === Información de la ubicacion y redes sociales === */
 .cabañas-info {
     width: 100%;
     display: none;
@@ -190,6 +220,7 @@ header {
     border-bottom: 1px solid #ffffff;
 }
 
+/* === Iconos Sociales === */
 .socials {
     display: flex;
     gap: 20px;
@@ -198,8 +229,10 @@ header {
 .socials ion-icon {
     font-size: 30px;
     cursor: pointer;
+    color: #ffffff;
 }
 
+/* === Menu hamburguesa ===*/
 .menu-toggle span {
     width: 20px;
     height: 3px;
@@ -218,6 +251,205 @@ header {
 
 .menu-toggle.active span:nth-child(3) {
     transform: rotate(-45deg) translate(11px, -10px);
+}
+
+/* === Hero Section === */
+.hero {
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/hero-section.jpg') no-repeat center center/cover fixed;
+    min-height: 100dvh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-align: center;
+    position: relative;
+}
+
+.container-hero {
+    max-width: 1200px;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.hero-text h1 {
+    font-size: clamp(2rem, 8vw, 5rem);
+    margin-bottom: 30px;
+    opacity: 0;
+    animation: fadeInUp 1s ease-out 0.5s forwards;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.hero-text p {
+    font-size: clamp(1rem, 4vw, 1.5rem);
+    margin-bottom: 30px;
+    opacity: 0;
+    animation: fadeInUp 1s ease-out 1s forwards;
+}
+
+.fadeInUp {
+    opacity: 0;
+    animation: fadeInUp 1s ease-out 1.5s forwards;
+}
+
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.arrow-down {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 30px;
+    color: #ffffff;
+    cursor: pointer;
+    opacity: 0;
+    animation: fadeIn 1s ease-out 2s forwards, bounce 2s infinite 2s;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes bounce {
+
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+        transform: translate(-50%, 0);
+    }
+
+    40% {
+        transform: translate(-50%, -10px);
+    }
+
+    60% {
+        transform: translate(-50%, -5px);
+    }
+}
+
+/* === Section Servicios === */
+.order-heading {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 2.5rem 0;
+}
+
+.heading-subtitle {
+    font-size: clamp(1.7rem, 5vw, 3.5rem);
+    text-align: start;
+    color: #8B5A2B;
+    line-height: 1.2;
+}
+
+.separador {
+    border: 2px solid #8B5A2B;
+    width: 100px;
+}
+
+/* Animaciones de entrada en el texto */
+.texto-fade-in {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 1s ease, transform 1s ease;
+}
+
+.texto-fade-in.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.services-section {
+    min-height: 100dvh;
+    background: linear-gradient(to bottom, #F5F5F5, #ffffdc);
+    padding: 50px 0;
+}
+
+.services-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 30px;
+    max-width: 1000px;
+    margin: auto;
+}
+
+.service-card {
+    cursor: pointer;
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 5px 6px rgba(0, 0, 0, 0.2);
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 15px;
+    height: 100%;
+    transition: all 0.3s ease-in-out;
+}
+
+.service-card:hover {
+    box-shadow: 0 5px 6px rgba(0, 0, 0, 0.4);
+}
+
+/* Animaciones de entrada en las Cards*/
+.hidden {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%) translateY(-100%);
+    transition: opacity 1.5s, filter 1.5s, transform 1.5s;
+}
+
+.show {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0) translateY(0);
+}
+
+.img-services {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+}
+
+.service-card h3 {
+    font-size: 20px;
+}
+
+.service-card p {
+    font-size: 15px;
+    line-height: 1.4;
+    color: #555;
+}
+
+/* === Acerca de Section === */
+.acerca-de-section {
+    min-height: 100dvh;
+    background: linear-gradient(to bottom, #ffffdc, #F5F5F5);
+}
+
+.descripcion-pueblo {
+    margin-block: 2rem;
+    font-size: 1.3rem;
+    color: #000000;
 }
 
 /* Responsive */
@@ -239,18 +471,21 @@ header {
     }
 
     .nav-links {
-        display: none;
         flex-direction: column;
         align-items: start;
         position: absolute;
-        top: 131px;
+        top: 120px;
         right: 0;
+        left: 0;
         background: #34495e;
         width: 100%;
-        height: calc(100vh - 131px);
+        height: calc(100vh - 120px);
         text-align: center;
-        padding: 50px;
-        transition: 0.3s;
+        padding: clamp(20px, 5vw, 50px);
+        transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+        z-index: 1000;
+        visibility: hidden;
+        opacity: 0;
     }
 
     .nav-links li a {
@@ -258,7 +493,8 @@ header {
     }
 
     .nav-links.active {
-        display: flex;
+        opacity: 1;
+        visibility: visible;
     }
 }
 
@@ -296,7 +532,6 @@ header {
 
 @media (max-width:480px) {
     .nav-links {
-        padding: 40px 30px;
         top: 111px;
         height: calc(100vh - 111px);
         gap: 30px;
@@ -319,7 +554,6 @@ header {
     }
 
     .btn-reserva-mobile {
-        font-size: 1rem;
         font-weight: 600;
     }
 
@@ -343,7 +577,6 @@ header {
     }
 
     .nav-links {
-        padding: 30px 10px;
         top: 91px;
         height: calc(100vh - 91px);
         gap: 20px;
@@ -359,7 +592,6 @@ header {
     }
 
     .btn-reserva-mobile {
-        font-size: 0.9rem;
         font-weight: 600;
     }
 
