--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,87 @@
     box-sizing: border-box;
 }
 
+body {
+    scroll-behavior: smooth;
+}
+
+/* Animaciones */
+.animate {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.animate.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+/* Animation variations */
+[data-animation="fade-up"].active {
+    animation: fade-up 0.6s ease forwards;
+}
+
+[data-animation="fade-down"].active {
+    animation: fade-down 0.6s ease forwards;
+}
+
+[data-animation="fade-left"].active {
+    animation: fade-left 0.6s ease forwards;
+}
+
+[data-animation="fade-right"].active {
+    animation: fade-right 0.6s ease forwards;
+}
+
+/* Keyframes */
+@keyframes fade-up {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes fade-down {
+    0% {
+        opacity: 0;
+        transform: translateY(-30px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes fade-left {
+    0% {
+        opacity: 0;
+        transform: translateX(-30px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes fade-right {
+    0% {
+        opacity: 0;
+        transform: translateX(30px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
 /* Fuentes generales */
 h1,
 h2 {
@@ -26,12 +107,13 @@ h6 {
 
 p,
 span,
-a {
+a,
+label {
     font-family: "Open Sans", serif;
 }
 
 header {
-    background-color: #fff;
+    background-color: #27374D;
     padding: 15px 20px;
     position: static;
     width: 100%;
@@ -40,6 +122,42 @@ header {
     right: 0;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     z-index: 100;
+}
+
+.container__icon-wpp {
+    position: relative;
+    cursor: pointer;
+}
+
+.icon-wpp {
+    z-index: 1000;
+    position: fixed;
+    bottom: 15px;
+    right: 15px;
+    color: white;
+    background-color: #25D366;
+    border-radius: 50%;
+    padding: 10px;
+    font-size: 35px;
+    transition: background-color 200ms ease-in-out;
+}
+
+.icon-wpp:hover {
+    background-color: #0cbb4c;
+}
+
+.pulse {
+    animation: pulse-animation 2s infinite;
+}
+
+@keyframes pulse-animation {
+    0% {
+        box-shadow: 0 0 0 0px #25D366;
+    }
+
+    100% {
+        box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+    }
 }
 
 .container-header {
@@ -70,6 +188,8 @@ header {
 
 .no-scroll {
     overflow: hidden;
+    position: fixed;
+    width: 100%;
     height: 100vh;
 }
 
@@ -79,24 +199,23 @@ header {
 
 .nav-links li a {
     text-decoration: none;
-    color: #333;
+    color: #fafdff;
     font-size: 1.1rem;
     transition: color 0.3s;
     font-weight: 500;
     position: relative;
     padding-bottom: 1.5px;
-    text-transform: uppercase;
 }
 
 .nav-links li a:hover {
-    color: #c49a6c;
+    color: #DDE6ED;
 }
 
 .nav-links li a::after {
     content: '';
     display: block;
     height: 2px;
-    background: #c49a6c;
+    background: #DDE6ED;
     position: absolute;
     left: 0;
     bottom: 0;
@@ -124,11 +243,11 @@ header {
     align-items: center;
     justify-content: center;
     gap: 10px;
-    color: #000000;
+    color: #fafdff;
 }
 
 .contact-info ion-icon {
-    color: #000000;
+    color: #fafdff;
     font-size: 24px;
 }
 
@@ -344,6 +463,10 @@ header {
     }
 }
 
+main {
+    background-color: #000000;
+}
+
 /* === Section Servicios === */
 .order-heading {
     display: flex;
@@ -354,45 +477,30 @@ header {
 }
 
 .heading-subtitle {
-    font-size: clamp(1.7rem, 5vw, 3.5rem);
+    font-size: clamp(1.8rem, 5vw, 3.5rem);
     text-align: start;
-    color: #8B5A2B;
-    line-height: 1.2;
-}
-
-.separador {
-    border: 2px solid #8B5A2B;
-    width: 100px;
-}
-
-/* Animaciones de entrada en el texto */
-.texto-fade-in {
-    opacity: 0;
-    transform: translateY(20px);
-    transition: opacity 1s ease, transform 1s ease;
-}
-
-.texto-fade-in.visible {
-    opacity: 1;
-    transform: translateY(0);
+    color: #A5D7E8;
+    line-height: 1.3;
+    font-weight: 600;
+    text-shadow: 0px 0px 50px #A5D7E8;
 }
 
 .services-section {
     min-height: 100dvh;
-    background: linear-gradient(to bottom, #F5F5F5, #ffffdc);
-    padding: 50px 0;
+    background: linear-gradient(to bottom, #000000, #31363F);
+    padding: 60px 0;
 }
 
 .services-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 30px;
-    max-width: 1000px;
+    gap: 25px;
+    max-width: 100%;
     margin: auto;
+    padding: 0 1.5rem;
 }
 
 .service-card {
-    cursor: pointer;
     background: white;
     padding: 20px;
     border-radius: 10px;
@@ -406,22 +514,37 @@ header {
     transition: all 0.3s ease-in-out;
 }
 
-.service-card:hover {
-    box-shadow: 0 5px 6px rgba(0, 0, 0, 0.4);
+.descripcion-services {
+    font-size: clamp(1rem, 3.5vw, 1.3rem);
+    color: #DDE6ED;
+    max-width: 50rem;
+    margin: 20px auto;
+    text-align: center;
 }
 
 /* Animaciones de entrada en las Cards*/
 .hidden {
     opacity: 0;
     filter: blur(5px);
-    transform: translateX(-100%) translateY(-100%);
-    transition: opacity 1.5s, filter 1.5s, transform 1.5s;
+    transform: translateY(100%);
+    transition: opacity 1.5s, filter 1.5s, transform 1.3s;
 }
 
 .show {
     opacity: 1;
     filter: blur(0);
     transform: translateX(0) translateY(0);
+}
+
+.animate-observer {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 1s ease-out, transform 1s ease-out;
+}
+
+.animate-observer.visible {
+    opacity: 1;
+    transform: translateY(0);
 }
 
 .img-services {
@@ -431,7 +554,9 @@ header {
 }
 
 .service-card h3 {
-    font-size: 20px;
+    font-size: clamp(1.25rem, 4vw, 20px);
+    width: 100%;
+    text-align: left;
 }
 
 .service-card p {
@@ -440,16 +565,445 @@ header {
     color: #555;
 }
 
+/* === Galeria === */
+.gallery {
+    padding: 10px;
+    width: 100%;
+    background: linear-gradient(to bottom, #000000, #31363F);
+}
+
+/* ----- Bento Grid (Solo visible en pantallas grandes) ----- */
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+}
+
+.grid img {
+    width: 100%;
+    height: 350px;
+    max-width: 100%;
+    object-fit: cover;
+    cursor: pointer;
+    transition: .3s ease;
+    border-radius: 5px;
+}
+
+.grid img:hover {
+    opacity: .9;
+    transform: scale(1.01);
+}
+
+/* ----- Estilos del Modal ----- */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease;
+}
+
+.oculto {
+    display: none;
+}
+
+.modal-content {
+    max-width: 80%;
+    max-height: 80%;
+    border-radius: 10px;
+}
+
+.close {
+    position: absolute;
+    top: 15px;
+    right: 25px;
+    color: white;
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.nav-btn {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: rgba(114, 114, 114, 0.5);
+    color: white;
+    border: none;
+    font-size: 24px;
+    border-radius: 10px;
+    padding: 10px;
+    cursor: pointer;
+}
+
+#prevBtn {
+    left: 30px;
+}
+
+#nextBtn {
+    right: 30px;
+}
+
 /* === Acerca de Section === */
 .acerca-de-section {
     min-height: 100dvh;
-    background: linear-gradient(to bottom, #ffffdc, #F5F5F5);
+    background: linear-gradient(to top, #000000, #31363F);
+    padding: 2rem;
+    text-align: center;
 }
 
 .descripcion-pueblo {
-    margin-block: 2rem;
-    font-size: 1.3rem;
+    font-size: clamp(1rem, 3.5vw, 1.3rem);
+    color: #DDE6ED;
+    max-width: 48rem;
+    margin: 10px auto;
+}
+
+.important-bold {
+    font-weight: 700;
+}
+
+/* Info turistica */
+.info-turistica {
+    background-color: #404E61;
+    color: #ffffff;
+    padding: 1.3rem;
+    border-radius: 0.5rem;
+    display: flex;
+    align-items: start;
+    margin: 0 auto 2rem auto;
+    width: 90%;
+}
+
+.info-turistica p {
+    font-size: clamp(.9rem, 3vw, 1rem);
+    text-align: left;
+    font-weight: 500;
+}
+
+.info-turistica ion-icon {
+    font-size: 25px;
+    flex-shrink: 0;
+    margin-right: .5rem;
+}
+
+/* Grid de lugares turísticos */
+.lugares-turisticos-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1.5rem;
+    width: 90%;
+    margin: 1.5rem auto 0 auto;
+}
+
+.lugar-turistico {
+    background: #fff;
+    border: 1px solid #cecece;
+    border-radius: 10px;
+    overflow: hidden;
+    text-align: left;
+    cursor: pointer;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.lugar-turistico img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+}
+
+.order__content-turistico {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 1.3rem;
+    gap: 1rem;
+}
+
+.lugar-turistico h3 {
+    font-size: clamp(1.2rem, 4vw, 1.5rem);
     color: #000000;
+}
+
+.lugar-turistico p {
+    font-size: clamp(0.875rem, 3vw, 1rem);
+    color: #666;
+}
+
+/* === Formulario Ubicación y Contacto === */
+
+.container-contacto {
+    background: url(../img/blob-scene-haikei.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 20px;
+    width: 100%;
+    border-radius: 100px 100px 0 0;
+    margin-top: 50px;
+    border-top: 2px solid rgb(143, 143, 143);
+}
+
+.heading-contact {
+    font-size: clamp(1.8rem, 5vw, 4rem);
+    text-align: start;
+    color: #ffffff;
+    line-height: 1.3;
+    font-weight: 600;
+    text-shadow: 0 0 100px #fff;
+}
+
+.contact-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5rem;
+    background: rgba(255, 255, 255, 0.1);
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    border-radius: 15px;
+    padding: 1rem;
+    backdrop-filter: blur(20rem);
+    -webkit-backdrop-filter: blur(20rem);
+}
+
+.contacto-cabañas {
+    padding: 15px 0;
+    width: 100%;
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.map-contact {
+    display: flex;
+    align-items: start;
+    flex-direction: column;
+    justify-content: start;
+}
+
+.map {
+    max-width: 100%;
+    margin-top: 20px;
+    height: 400px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+.map iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.sub-heading-contact {
+    font-size: clamp(1.25rem, 4vw, 2rem);
+    margin-bottom: 1rem;
+    text-align: left;
+    color: white;
+    width: 100%;
+}
+
+.contacto-cabañas p {
+    font-size: clamp(.9rem, 3vw, 1rem);
+    color: white;
+    display: flex;
+    align-items: center;
+    margin: 5px 0;
+    gap: .5rem;
+}
+
+.contacto-cabañas ion-icon {
+    font-size: 20px;
+    color: white;
+}
+
+.socials-contact {
+    width: 100%;
+    display: flex;
+    margin-top: 10px;
+    align-items: start;
+    justify-content: start;
+    gap: .5rem;
+}
+
+.socials-contact ion-icon {
+    font-size: 25px;
+}
+
+.form-reserva {
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(20rem);
+    border-radius: 15px;
+    padding: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    width: 100%;
+    margin: 0 auto;
+}
+
+.form-reserva form {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-reserva label {
+    color: #ffffff;
+    margin-bottom: 10px;
+}
+
+textarea {
+    width: 100%;
+    height: 100px;
+    resize: none;
+    font-size: 16px;
+}
+
+#contador {
+    margin-bottom: 10px;
+    color: white;
+}
+
+.form-reserva input,
+.form-reserva textarea {
+    background: rgba(255, 255, 255, 0.3);
+    border: none;
+    border-radius: 5px;
+    padding: 15px;
+    margin-bottom: 20px;
+    color: #ffffff;
+    outline: none;
+    letter-spacing: 1px;
+    transition: all .3s ease;
+    box-shadow: inset 0px 2px 0px rgb(143, 143, 143);
+}
+
+.form-reserva input::placeholder {
+    color: white;
+}
+
+.form-reserva input:focus {
+    box-shadow: inset 0px 2px 0px rgb(255, 255, 255);
+}
+
+input.error {
+    border: 1px solid red;
+    background-color: #ffe6e6;
+}
+
+.error-mensaje {
+    color: rgb(255, 45, 45);
+    font-size: 15px;
+    margin-top: 5px;
+}
+
+.form-reserva button {
+    background: #000000;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    padding: 15px;
+    cursor: pointer;
+    transition: all .3s ease;
+    font-weight: 600;
+    font-size: 1rem;
+}
+
+.form-reserva button:hover {
+    background: #ffffff;
+    color: #000000;
+}
+
+/* === Footer Section === */
+.container__footer {
+    width: 100%;
+    padding: 30px 25px 15px 25px;
+    background: linear-gradient(to bottom, #000000, #000000);
+}
+
+.list__links {
+    display: flex;
+    gap: 2rem;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 0;
+}
+
+.list__links a {
+    position: relative;
+    transition: color 0.3s ease;
+    color: #ffffff;
+    text-decoration: none;
+    font-size: clamp(14px, 2vw, 18px);
+}
+
+.list__links a::after {
+    content: '';
+    position: absolute;
+    bottom: -3px;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background-color: #ffffff;
+    transition: width 0.3s ease;
+}
+
+.list__links a:hover::after {
+    width: 100%;
+}
+
+.divider {
+    width: 100%;
+    border: 1px solid rgba(51, 51, 51, 0.753);
+    margin-block: 15px;
+}
+
+.end__footer-section {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.copy {
+    text-align: start;
+    font-size: 0.9em;
+    color: #afafaf;
+    margin-block: 1.5rem;
+}
+
+/* Scrollbar */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #2c2c2c;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #d1d1d1;
+    border-radius: 20px;
+    border: 1px solid #afafaf;
+}
+
+@media (prefers-reduced-motion: reduce) {
+    * {
+        animation: none;
+        transition: none;
+    }
 }
 
 /* Responsive */
@@ -495,6 +1049,36 @@ header {
     .nav-links.active {
         opacity: 1;
         visibility: visible;
+    }
+
+    .hero {
+        background-attachment: initial;
+    }
+
+    .services-container {
+        grid-template-columns: 1fr;
+    }
+
+    .grid {
+        grid-template-columns: 1fr;
+    }
+
+    .lugares-turisticos-grid {
+        grid-template-columns: 1fr;
+    }
+
+    .contact-grid {
+        grid-template-columns: 1fr;
+        gap: 2.5rem;
+    }
+
+    .form-reserva {
+        width: 100%;
+    }
+
+    .list__links {
+        flex-direction: column;
+        align-items: flex-start;
     }
 }
 
@@ -569,6 +1153,30 @@ header {
         font-size: 25px;
         cursor: pointer;
     }
+
+    .separador {
+        width: 50px;
+    }
+
+    .acerca-de-section {
+        padding: 1rem;
+    }
+
+    .order-heading {
+        padding: 1.5rem 0;
+    }
+
+    .services-section {
+        padding: 20px 0;
+    }
+
+    .services-container {
+        padding: 0 1rem;
+    }
+
+    .copy {
+        margin-block: 1rem;
+    }
 }
 
 @media (max-width:375px) {
@@ -606,5 +1214,45 @@ header {
 
     .container-reserva {
         margin-top: 20px;
+    }
+
+    .lugares-turisticos-grid {
+        width: 95%;
+    }
+
+    .info-turistica {
+        margin: 0 auto 1.5rem auto;
+        padding: 1rem;
+        width: 95%;
+    }
+
+    .acerca-de-section {
+        padding: 0rem;
+    }
+
+    .order__content-turistico {
+        padding: 1rem;
+        gap: .5rem;
+    }
+
+    .container-contacto {
+        padding: 10px;
+        border-radius: 50px 50px 0 0;
+    }
+
+    .contacto-cabañas ion-icon {
+        font-size: 19px;
+    }
+
+    .order-heading {
+        padding: 1rem;
+    }
+
+    .sub-heading-contact {
+        text-align: center;
+    }
+
+    .contact-grid {
+        padding: .5rem;
     }
 }
