--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,17 @@
     box-sizing: border-box;
 }
 
-body {
+a {
+    text-decoration: none;
+    color: white;
+}
+
+html {
     scroll-behavior: smooth;
+}
+
+.scroll-target {
+    scroll-margin-top: 50px;
 }
 
 /* Animaciones */
@@ -113,7 +122,7 @@ label {
 }
 
 header {
-    background-color: #27374D;
+    background-color: #F5F1E3;
     padding: 15px 20px;
     position: static;
     width: 100%;
@@ -132,7 +141,7 @@ header {
 .icon-wpp {
     z-index: 1000;
     position: fixed;
-    bottom: 60px;
+    bottom: 15px;
     right: 15px;
     color: white;
     background-color: #25D366;
@@ -172,7 +181,7 @@ header {
 .logo {
     display: block;
     object-fit: cover;
-    width: 90px;
+    width: 110px;
     max-width: 100%;
     height: auto;
 }
@@ -199,23 +208,24 @@ header {
 
 .nav-links li a {
     text-decoration: none;
-    color: #fafdff;
+    color: #4b3322;
     font-size: 1.1rem;
     transition: color 0.3s;
-    font-weight: 500;
+    font-weight: 600;
     position: relative;
     padding-bottom: 1.5px;
+    text-transform: uppercase;
 }
 
 .nav-links li a:hover {
-    color: #DDE6ED;
+    color: #8B5E3C;
 }
 
 .nav-links li a::after {
     content: '';
     display: block;
     height: 2px;
-    background: #DDE6ED;
+    background: #6F4E37;
     position: absolute;
     left: 0;
     bottom: 0;
@@ -243,11 +253,11 @@ header {
     align-items: center;
     justify-content: center;
     gap: 10px;
-    color: #fafdff;
+    color: #4b3322;
 }
 
 .contact-info ion-icon {
-    color: #fafdff;
+    color: #4b3322;
     font-size: 24px;
 }
 
@@ -255,7 +265,7 @@ header {
 .btn-reserva {
     text-align: center;
     font-size: clamp(1rem, 3vw, 1.1rem);
-    background-color: #ff6f61;
+    background-color: #5c8fb4;
     color: white;
     padding: 10px 25px;
     text-decoration: none;
@@ -265,10 +275,11 @@ header {
     border: none;
     outline: none;
     cursor: pointer;
+    font-weight: 600;
 }
 
 .btn-reserva:hover {
-    background-color: #e65a50;
+    background-color: #68a0c8;
 }
 
 .linea-divisora {
@@ -335,8 +346,7 @@ header {
 .sub-heading {
     font-size: 1.3rem;
     text-align: left;
-    margin-bottom: 20px;
-    border-bottom: 1px solid #ffffff;
+    margin-bottom: 15px;
 }
 
 /* === Iconos Sociales === */
@@ -355,7 +365,7 @@ header {
 .menu-toggle span {
     width: 20px;
     height: 3px;
-    background: #ffffff;
+    background: #4b3322;
     margin: 3px 0;
     transition: 0.3s ease;
 }
@@ -392,17 +402,20 @@ header {
 
 .hero-text h1 {
     font-size: clamp(2rem, 8vw, 5rem);
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     opacity: 0;
     animation: fadeInUp 1s ease-out 0.5s forwards;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 600;
 }
 
 .hero-text p {
-    font-size: clamp(1rem, 4vw, 1.5rem);
+    font-size: clamp(1rem, 4vw, 1.6rem);
     margin-bottom: 30px;
-    opacity: 0;
     animation: fadeInUp 1s ease-out 1s forwards;
+    font-weight: 600;
+    color: #e3e3e3;
+    opacity: 0;
+    font-style: italic;
 }
 
 .fadeInUp {
@@ -464,7 +477,7 @@ header {
 }
 
 main {
-    background-color: #000000;
+    background: #D4B998;
 }
 
 /* === Section Servicios === */
@@ -477,17 +490,16 @@ main {
 }
 
 .heading-subtitle {
-    font-size: clamp(1.8rem, 5vw, 3.5rem);
+    font-size: clamp(1.8rem, 5vw, 4rem);
     text-align: start;
-    color: #A5D7E8;
+    color: #33863c;
     line-height: 1.3;
     font-weight: 600;
-    text-shadow: 0px 0px 50px #A5D7E8;
 }
 
 .services-section {
     min-height: 100dvh;
-    background: linear-gradient(to bottom, #000000, #31363F);
+    background: linear-gradient(to bottom, #eddfc6, #D4B998);
     padding: 60px 0;
 }
 
@@ -501,26 +513,27 @@ main {
 }
 
 .service-card {
+    cursor: pointer;
     background: white;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 5px 6px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 7px 5px rgba(0, 0, 0, 0.4);
     text-align: left;
     display: flex;
     flex-direction: column;
     align-items: start;
-    gap: 15px;
+    gap: 10px;
     height: 100%;
-    transition: all 0.3s ease-in-out;
 }
 
 .descripcion-services {
     font-size: clamp(1rem, 3.5vw, 1.3rem);
-    color: #DDE6ED;
-    max-width: 50rem;
-    margin: 20px 0;
+    color: #6F4E37;
+    max-width: 53rem;
+    margin: 15px 0;
     padding: 0 10px;
     text-align: center;
+    font-weight: 600;
 }
 
 /* Animaciones de entrada en las Cards*/
@@ -570,7 +583,7 @@ main {
 .gallery {
     padding: 10px;
     width: 100%;
-    background: linear-gradient(to bottom, #000000, #31363F);
+    background: linear-gradient(to bottom, #eddfc6, #D4B998);
 }
 
 /* ----- Bento Grid (Solo visible en pantallas grandes) ----- */
@@ -582,17 +595,18 @@ main {
 
 .grid img {
     width: 100%;
-    height: 350px;
+    height: 400px;
     max-width: 100%;
     object-fit: cover;
     cursor: pointer;
     transition: .3s ease;
     border-radius: 5px;
+    aspect-ratio: 16 / 9;
 }
 
 .grid img:hover {
     opacity: .9;
-    transform: scale(1.01);
+    transform: scale(1.02);
 }
 
 /* ----- Estilos del Modal ----- */
@@ -655,16 +669,17 @@ main {
 /* === Acerca de Section === */
 .acerca-de-section {
     min-height: 100dvh;
-    background: linear-gradient(to top, #000000, #31363F);
-    padding: 2rem;
+    background: linear-gradient(to bottom, #eddfc6, #D4B998);
+    padding: 3rem;
     text-align: center;
 }
 
 .descripcion-pueblo {
     font-size: clamp(1rem, 3.5vw, 1.3rem);
-    color: #DDE6ED;
+    color: #6F4E37;
     max-width: 48rem;
     margin: 10px auto;
+    font-weight: 500;
 }
 
 .important-bold {
@@ -673,7 +688,7 @@ main {
 
 /* Info turistica */
 .info-turistica {
-    background-color: #404E61;
+    background-color: #5c8fb4;
     color: #ffffff;
     padding: 1.3rem;
     border-radius: 0.5rem;
@@ -710,8 +725,8 @@ main {
     border-radius: 10px;
     overflow: hidden;
     text-align: left;
-    cursor: pointer;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+
 }
 
 .lugar-turistico img {
@@ -749,7 +764,7 @@ main {
     width: 100%;
     border-radius: 100px 100px 0 0;
     margin-top: 50px;
-    border-top: 2px solid rgb(143, 143, 143);
+    border-top: 3px solid #ffffff;
 }
 
 .heading-contact {
@@ -758,7 +773,6 @@ main {
     color: #ffffff;
     line-height: 1.3;
     font-weight: 600;
-    text-shadow: 0 0 100px #fff;
 }
 
 .contact-grid {
@@ -891,7 +905,7 @@ textarea::placeholder {
     outline: none;
     letter-spacing: 1px;
     transition: all .3s ease;
-    box-shadow: inset 0px 2px 0px rgb(143, 143, 143);
+    box-shadow: inset 0px 2px 0px rgba(153, 153, 153, 0.116);
 }
 
 .form-reserva input::placeholder {
@@ -914,7 +928,7 @@ input.error {
 }
 
 .form-reserva button {
-    background: #000000;
+    background: #5eade6;
     color: #ffffff;
     border: none;
     border-radius: 5px;
@@ -926,15 +940,14 @@ input.error {
 }
 
 .form-reserva button:hover {
-    background: #ffffff;
-    color: #000000;
+    background: #68a0c8;
 }
 
 /* === Footer Section === */
 .container__footer {
     width: 100%;
     padding: 30px 25px 15px 25px;
-    background: linear-gradient(to bottom, #000000, #000000);
+    background: linear-gradient(to bottom, #6d4a30, #7e5b40);
 }
 
 .list__links {
@@ -970,9 +983,9 @@ input.error {
 }
 
 .divider {
-    width: 100%;
-    border: 1px solid rgba(51, 51, 51, 0.753);
-    margin-block: 15px;
+    width: 75%;
+    border: 1px solid rgba(219, 219, 219, 0.753);
+    margin: 15px auto;
 }
 
 .end__footer-section {
@@ -985,7 +998,7 @@ input.error {
 .copy {
     text-align: start;
     font-size: 0.9em;
-    color: #afafaf;
+    color: #d6d6d6;
     margin-block: 1.5rem;
 }
 
@@ -1084,6 +1097,11 @@ input.error {
     .list__links {
         flex-direction: column;
         align-items: flex-start;
+    }
+
+    .icon-wpp {
+        bottom: 80px;
+        right: 15px;
     }
 }
 
