--- a/css/styles.css
+++ b/css/styles.css
@@ -183,7 +183,7 @@ header {
     object-fit: cover;
     width: 100px;
     max-width: 100%;
-    height: auto;
+    height: 90px;
 }
 
 /* Enlaces de navegación */
@@ -265,9 +265,9 @@ header {
 .btn-reserva {
     text-align: center;
     font-size: clamp(1rem, 3vw, 1.1rem);
-    background-color: #5c8fb4;
+    background-color: #2f6790;
     color: white;
-    padding: 10px 25px;
+    padding: 12px 30px;
     text-decoration: none;
     border-radius: 50px;
     text-transform: uppercase;
@@ -279,7 +279,7 @@ header {
 }
 
 .btn-reserva:hover {
-    background-color: #68a0c8;
+    background-color: #3c77a1;
 }
 
 /* === Icono del menu hamburguesa ===*/
@@ -356,7 +356,7 @@ header {
 
 /* === Hero Section === */
 .hero {
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/hero-section.jpg') no-repeat center center/cover fixed;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/hero-section.webp') no-repeat center center/cover;
     min-height: 100dvh;
     display: flex;
     justify-content: center;
@@ -1060,10 +1060,6 @@ input.error {
     .nav-links.active {
         opacity: 1;
         visibility: visible;
-    }
-
-    .hero {
-        background-attachment: initial;
     }
 
     .services-container {
